--- a/app/src/main/res/drawable/img_empty_folder.xml
+++ b/app/src/main/res/drawable/img_empty_folder.xml
@@ -19,18 +19,18 @@
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="131dp"
-    android:height="89dp"
-    android:viewportWidth="131"
-    android:viewportHeight="89">
+    android:width="375dp"
+    android:height="140dp"
+    android:viewportWidth="375"
+    android:viewportHeight="140">
   <path
-      android:pathData="M0,4.428C0,2.331 1.708,0.63 3.816,0.63H30.401C31.497,0.63 32.575,0.865 33.564,1.313C34.347,1.668 34.978,2.272 35.544,2.919L38.189,5.946C38.567,6.378 38.971,6.794 39.455,7.101C40.729,7.91 41.746,7.91 43.048,7.91H106.835C108.942,7.91 110.65,9.611 110.65,11.709V69.004C110.65,79.843 101.824,88.63 90.937,88.63H5.723C2.562,88.63 0,86.079 0,82.932V4.428Z">
+      android:pathData="M130,36.428C130,34.331 131.708,32.63 133.816,32.63H160.401C161.497,32.63 162.575,32.865 163.564,33.313C164.347,33.668 164.978,34.272 165.544,34.919L168.189,37.946C168.567,38.378 168.971,38.794 169.455,39.101C170.729,39.91 171.746,39.91 173.048,39.91H236.835C238.942,39.91 240.65,41.611 240.65,43.709V101.004C240.65,111.843 231.824,120.63 220.937,120.63H135.723C132.562,120.63 130,118.079 130,114.932V36.428Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="105.09"
-          android:startX="74.7206"
-          android:endY="-3.16867"
-          android:endX="74.7206"
+          android:startY="137.09"
+          android:startX="204.721"
+          android:endY="28.8313"
+          android:endX="204.721"
           android:type="linear">
         <item android:offset="0" android:color="#FF1B74DB"/>
         <item android:offset="1" android:color="#FF81D1FF"/>
@@ -38,13 +38,13 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="M18.955,27.599C19.781,24.749 22.392,22.788 25.359,22.788H124.345C127.675,22.788 130.074,25.982 129.148,29.18L113.316,83.818C112.49,86.669 109.88,88.63 106.913,88.63H7.926C4.597,88.63 2.197,85.436 3.124,82.238L18.955,27.599Z">
+      android:pathData="M148.955,59.599C149.781,56.749 152.391,54.788 155.359,54.788H254.345C257.675,54.788 260.074,57.981 259.148,61.18L243.316,115.818C242.49,118.669 239.88,120.63 236.913,120.63H137.926C134.597,120.63 132.197,117.436 133.124,114.238L148.955,59.599Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="23.938"
-          android:startX="85.272"
-          android:endY="95.8282"
-          android:endX="70.6483"
+          android:startY="55.938"
+          android:startX="215.272"
+          android:endY="127.828"
+          android:endX="200.648"
           android:type="linear">
         <item android:offset="0" android:color="#FF81D1FF"/>
         <item android:offset="1" android:color="#FF68B0FF"/>
