--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2020 Proton Technologies AG
+  ~ Copyright (c) 2022 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
   ~
@@ -72,14 +72,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <include
+                <ch.protonmail.android.mailbox.presentation.ui.EmptyMailboxView
                     android:id="@+id/include_mailbox_no_messages"
-                    layout="@layout/layout_mailbox_no_messages"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toTopOf="@id/mailboxActionsView"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/storageLimitAlert" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
 
                 <include
                     android:id="@+id/include_mailbox_error"
