Remove FloatingActionButton library and replace Contacts menu with native Floating Action Buttons

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -218,4 +218,7 @@
 
     <!-- endregion -->
 
+    <dimen name="animation_translation_55">55dp</dimen>
+    <dimen name="animation_translation_105">105dp</dimen>
+
 </resources>
