--- a/app/src/main/res/drawable/background_selection_mode_selected.xml
+++ b/app/src/main/res/drawable/background_selection_mode_selected.xml
@@ -22,7 +22,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/cornflower_blue" />
+    <solid android:color="?attr/brand_norm" />
 
     <corners android:radius="8dp" />
 </shape>
