--- a/app/src/main/res/drawable/bg_spinner_three_dots.xml
+++ b/app/src/main/res/drawable/bg_spinner_three_dots.xml
@@ -22,7 +22,8 @@
     <item>
         <layer-list>
             <item
-                android:drawable="@drawable/ic_proton_three_dots_horizontal" android:gravity="center_vertical|right"
+                android:drawable="@drawable/ic_proton_three_dots_vertical" android:width="@dimen/size_icon_m"
+                android:gravity="center_vertical|right"
                 android:end="12dp"/>
         </layer-list>
     </item>
