--- a/app/src/main/res/layout/activity_set_message_password.xml
+++ b/app/src/main/res/layout/activity_set_message_password.xml
@@ -132,6 +132,7 @@
                 android:layout_marginTop="@dimen/padding_l"
                 android:text="@string/set_msg_password_remove_password"
                 android:textColor="?colorError"
+                app:strokeColor="?colorError"
                 android:enabled="false"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
