--- a/app/src/main/res/layout/layout_contacts_edit_filed_with_delete.xml
+++ b/app/src/main/res/layout/layout_contacts_edit_filed_with_delete.xml
@@ -31,13 +31,13 @@
         android:maxLines="1"
         android:paddingStart="@dimen/padding_m"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
+        app:layout_constraintEnd_toStartOf="@+id/btn_clear"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlSymmetry" />
 
     <ImageButton
-        android:id="@+id/btn_minus"
+        android:id="@+id/btn_clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
