--- a/app/src/main/res/drawable/background_selection_mode_not_selected.xml
+++ b/app/src/main/res/drawable/background_selection_mode_not_selected.xml
@@ -24,7 +24,9 @@
 
     <solid android:color="@color/interaction_weak" />
 
-    <stroke android:width="1dp" android:color="@color/cornflower_blue" />
+    <stroke
+        android:width="1dp"
+        android:color="?attr/brand_norm" />
 
     <corners android:radius="8dp" />
 </shape>
