--- a/app/src/main/res/drawable/cursor_black.xml
+++ b/app/src/main/res/drawable/cursor_black.xml
@@ -19,6 +19,6 @@
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/dark_purple" />
+    <solid android:color="?attr/brand_norm" />
     <size android:width="1.5dp" android:height="15dp" />
 </shape>
