--- a/app/src/main/res/drawable/spinner_item_dropdown.xml
+++ b/app/src/main/res/drawable/spinner_item_dropdown.xml
@@ -20,7 +20,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/switch_settings_item" />
+            <solid android:color="?attr/brand_norm" />
         </shape>
     </item>
     <item android:bottom="1px">
