--- a/app/src/main/res/layout/activity_edit_contact_details.xml
+++ b/app/src/main/res/layout/activity_edit_contact_details.xml
@@ -224,7 +224,7 @@
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white_55"
+        android:background="@color/background_norm"
         android:visibility="gone">
 
         <ProgressBar
