--- a/app/src/main/res/layout/contact_vcard_item_note.xml
+++ b/app/src/main/res/layout/contact_vcard_item_note.xml
@@ -43,7 +43,7 @@
         android:gravity="center_vertical"
         android:padding="@dimen/padding_m"
         android:textAllCaps="true"
-        android:textColor="@color/cornflower_blue"
+        android:textColor="?attr/brand_norm"
         android:visibility="gone"
         app:drawableStartCompat="@drawable/ic_proton_plus"
         tools:text="Add new x"
