--- a/app/src/main/res/layout/mailbox_left_swipe_action_mark_read.xml
+++ b/app/src/main/res/layout/mailbox_left_swipe_action_mark_read.xml
@@ -17,13 +17,12 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="@dimen/padding_xl"
-    android:background="@color/cornflower_blue">
+    android:background="?attr/brand_norm">
 
     <TextView
         android:id="@+id/swipe_action_text_view"
