--- a/app/src/main/res/layout/message_details_actions.xml
+++ b/app/src/main/res/layout/message_details_actions.xml
@@ -49,6 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:tint="@color/cornflower_blue" />
+        app:tint="?attr/brand_norm" />
 
 </merge>
