--- a/app/src/main/res/layout/layout_open_in_proton_calendar.xml
+++ b/app/src/main/res/layout/layout_open_in_proton_calendar.xml
@@ -29,13 +29,13 @@
 
     <ImageView
         android:id="@+id/open_in_proton_calendar_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_proton_calendar"
-        android:contentDescription="@string/details_open_in_proton_calendar_icon_desc"/>
+        android:src="@drawable/ic_logo_calendar"
+        android:contentDescription="@string/details_open_in_proton_calendar_icon_desc" />
 
     <TextView
         android:id="@+id/open_in_proton_calendar_title"
